--- a/styles.css
+++ b/styles.css
@@ -1,238 +1,324 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --black: #1A1A1A;
-    --gray-1: #303030;
-    --font-light: #E3E3E3;
+  --black: #1a1a1a;
+  --gray-1: #303030;
+  --font-light: #e3e3e3;
 }
 
 body {
-    font-family: "Inter", sans-serif;
-    font-size: 13px;
-    color: var(--gray-1);
-    background-color: #F1F1F1;
+  font-family: "Inter", sans-serif;
+  font-size: 13px;
+  color: var(--gray-1);
+  background-color: #f1f1f1;
 }
 
 main {
-    max-width: 800px;
+  max-width: 800px;
 }
 
 img {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 button {
-    /* height: 30px; */
-    border-radius: 6px;
-    border: none;
-    font-weight: 500;
-    padding: 8px 12px 8px 12px;
+  /* height: 30px; */
+  border-radius: 6px;
+  border: none;
+  font-weight: 500;
+  padding: 8px 12px 8px 12px;
 }
 
 .black-btn {
-    background-color: #404040;
-    color: var(--font-light);
+  background-color: #404040;
+  color: var(--font-light);
 }
 
 /* Custom styles */
 .w-full {
-    width: 100%;
+  width: 100%;
 }
 
 .h-full {
-    height: 100%;
+  height: 100%;
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .flex-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .flex-between {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .items-center {
-    align-items: center;
+  align-items: center;
 }
 
 .justify-between {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .justify-center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .gap-md {
-    gap: 8px;
+  gap: 8px;
 }
 
 .gap-lg {
-    gap: 10px;
+  gap: 10px;
 }
 
 .rounded-md {
-    border-radius: 8px;
+  border-radius: 8px;
 }
 
 .mx-auto {
-    margin-right: auto;
-    margin-left: auto;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.p-lg {
+    padding: 16px;
 }
 
 .mt-2 {
-    margin-top: 4px;
+  margin-top: 4px;
 }
 
 .mb-2 {
-    margin-bottom: 4px;
+  margin-bottom: 4px;
 }
 
 .text-sm {
-    font-size: 14px;
+  font-size: 14px;
+}
+
+.text-xs {
+  font-size: 12px;
 }
 
 .font-semibold {
-    font-weight: 600;
+  font-weight: 600;
+}
+
+.bg-white {
+    background-color: white;
 }
 
 /*  */
 
 .container {
-    padding-top: 56px;
+  padding-top: 56px;
 }
 
 .header {
-    background-color: var(--black);
-    color: white;
-    height: 56px;
-    padding: 0 16px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+  background-color: var(--black);
+  color: white;
+  height: 60px;
+  padding: 0 16px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .logo {
-    width: 100px;
+  width: 100px;
 }
 
 .header-input {
-    width: 480px;
-    height: 32px;
-    border-radius: 8px;
-    padding: 0 8px;
-    gap: 6px;
-    border: 1px solid #616161;
-    background-color: var(--gray-1);
+  width: 480px;
+  height: 32px;
+  border-radius: 8px;
+  padding: 0 8px;
+  gap: 6px;
+  border: 1px solid #616161;
+  background-color: var(--gray-1);
 }
 
 .header-search-input {
-    background-color: transparent;
-    border: none;
-    color: #B5B5B5;
+  background-color: transparent;
+  border: none;
+  color: #b5b5b5;
 }
 
 .header-search-input::placeholder {
-    color: #B5B5B5;
+  color: #b5b5b5;
 }
 
 .header-search-icon {
-    width: 20px;
+  width: 20px;
 }
 
 .header-search-input:focus {
-    outline: none;
+  outline: none;
 }
 
 .header-gray-bg {
-    background-color: var(--gray-1);
-    color: #E3E3E3;
-    height: 32px;
+  background-color: var(--gray-1);
+  color: #e3e3e3;
+  height: 32px;
 }
 
 .header-bell {
-    width: 32px;
+  width: 32px;
 }
 
 .header-name {
-    padding: 2px 2px 2px 8px;
-    gap: 8px;
+  padding: 2px 2px 2px 8px;
+  gap: 8px;
 }
 
 .header-green {
-    background-color: #36FBA1;
-    color: #00000066;
-    font-weight: 500;
-    font-size: 12px;
-    width: 28px;
-    height: 28px;
-    border-radius: 6px;
+  background-color: #36fba1;
+  color: #00000066;
+  font-weight: 500;
+  width: 28px;
+  height: 28px;
+  border-radius: 6px;
+}
+
+.menu-pos {
+    position: fixed;
+    top: 68px;
+    right: 16px;
+    /* display: none; */
+}
+
+.svg-outline:focus {
+    border: 1px solid #005BD3;
+}
+
+.alerts {
+    max-width: 393px;
+    border: 1px solid #DBDBDB;
+    display: none;
+}
+
+.drop-menu {
+    max-width: 320px;
+    padding: 6px 0px 0px 0px;
+}
+
+.drop-menu-section {
+    padding: 0px 8px 0px 8px;
+    
+}
+
+.menu-border {
+    border-bottom: 1px solid #E1E1E1;
+}
+
+.drop-menu-name {
+    padding: 4px 12px 4px 8px;
+    background-color: #f1f1f1;
+    color: #303030;
+}
+
+.drop-menu-item {
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+
+.drop-menu-item-lg {
+    height: 55px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.alerts-text {
+    background-color: #F1F1F1;
+    color: #616161;
+    height: 50px;
+    margin-top: 16px;
 }
 
 .trial {
-    background-color: var(--black);
-    color: var(--font-light);
-    padding: 12px 8px 12px 16px;
-    height: 56px;
+  background-color: var(--black);
+  color: var(--font-light);
+  padding: 12px 8px 12px 16px;
+  height: 56px;
 }
 
 main {
-    padding-top: 30px;
+  padding-top: 30px;
 }
 
 .set-up {
-    border-radius: 18px;
-    padding: 16px;
-    border: 1px solid #dbdbdb;
-    margin-top: 20px;
-    background-color: white;
+  border-radius: 18px;
+  padding: 16px;
+  border: 1px solid #dbdbdb;
+  margin-top: 20px;
+  background-color: white;
 }
 
 .setup-text {
-    margin: 10px 0;
+  margin: 10px 0;
 }
 
 .setup-range {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .setup-item-wrap {
-    margin-top: 32px;
+  margin-top: 32px;
 }
 
 .setup-item {
-    background-color: #F3F3F3;
-    padding: 8px 8px 12px 8px;
-    border-radius: 10px;
+  background-color: #f3f3f3;
+  padding: 8px 8px 12px 8px;
+  border-radius: 10px;
 }
 
 .setup-item-main {
-    padding-left: 28px;
+  padding-left: 28px;
 }
 
 .setup-item-text {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 .link {
-    color: #005BD3;
+  color: #005bd3;
 }
+
+/* Range */
+input[type="range"] {
+    background: linear-gradient(to right, #1a1a1a 0%, #1a1a1a 0%, #e3e3e3 0%, #e3e3e3 100%);
+    border: none;
+    border-radius: 8px;
+    height: 5px;
+    width: 72px;
+    outline: none; 
+    transition: background 450ms ease-in;
+    -webkit-appearance: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+}
+
+/*  */
