--- a/styles.css
+++ b/styles.css
@@ -507,7 +507,7 @@ button {
 }
 
 .hidden {
-    display: none !important;
+  display: none !important;
 }
 
 .flex {
@@ -668,17 +668,20 @@ button {
   outline: none;
 }
 
-.header-right > button:hover, .trial-icon:hover {
+.header-right > button:hover,
+.trial-icon:hover {
   border-radius: 8px;
   background: var(--font-mid-2, #616161);
 }
 
-.header-right > button:active, .trial-icon:active {
+.header-right > button:active,
+.trial-icon:active {
   border-radius: 8px;
   background: var(--grey-grey-50, #656266);
 }
 
-.header-right > button:focus, .trial-icon:focus {
+.header-right > button:focus,
+.trial-icon:focus {
   border-radius: 8px;
   background: var(--font-mid-2, #656266);
   outline: 2px solid #005bd3;
@@ -717,14 +720,15 @@ button {
   border-radius: 6px;
 }
 
-.icon, .trial-icon {
-    padding: 0 !important;
-    background-color: transparent;
-    height: 24px;
-    width: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.icon,
+.trial-icon {
+  padding: 0 !important;
+  background-color: transparent;
+  height: 24px;
+  width: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .icon:hover {
@@ -794,8 +798,8 @@ button {
 }
 
 .drop-menu-name {
-    width: 100%;
-    height: 32px;
+  width: 100%;
+  height: 32px;
   padding: 4px 12px 4px 8px !important;
   background-color: #f1f1f1;
   color: #303030;
@@ -826,15 +830,22 @@ button {
 }
 
 .drop-menu-item:active,
-.drop-menu-item-lg:active, .drop-menu-name:active {
+.drop-menu-item-lg:active,
+.drop-menu-name:active {
   border-radius: 8px;
   background: var(--states-pressed, #f0f0f0);
 }
 
 .drop-menu-item:focus,
-.drop-menu-item-lg:focus, .drop-menu-name:focus {
+.drop-menu-item-lg:focus {
   border-radius: 8px;
-  background: var(--states-hover, #f1f1f1);
+  background: white;
+  outline: 2px solid #005bd3;
+}
+
+.drop-menu-name:focus {
+  border-radius: 8px;
+  background: #f1f1f1;
   outline: 2px solid #005bd3;
 }
 
@@ -901,7 +912,7 @@ main {
 }
 
 .set-up.active .setup-close {
-  display: block ;
+  display: block;
 }
 
 .setup-range {
@@ -950,6 +961,10 @@ main {
   font-weight: 600;
 }
 
+.setup-item-title {
+  cursor: pointer;
+}
+
 .setup-item-text {
   margin: 16px 0;
   line-height: 1.4;
@@ -978,7 +993,6 @@ input[type="range"] {
   height: 5px;
   width: 72px;
   outline: none;
-  transition: background 450ms ease-in;
   -webkit-appearance: none;
 }
 
@@ -997,20 +1011,46 @@ input[type="range"]::-webkit-slider-thumb {
   display: none;
 }
 
-.checkbox:hover .checkbox-loading {
-  display: block;
+.checkbox:hover .checkbox-default circle {
+  stroke-dasharray: 0 0;
 }
 
-.checkbox:hover .checkbox-default {
+.checkbox.loading .checkbox-loading {
+  display: block;
+  animation: spinner 0.5s linear infinite;
+}
+
+@keyframes spinner {
+  from {
+    rotate: 0;
+  }
+  to {
+    rotate: 360deg;
+  }
+}
+
+@keyframes complete {
+  from {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.checkbox.active .checkbox-default {
+  display: none;
+}
+
+.checkbox.loading .checkbox-default {
   display: none;
 }
 
 .checkbox.active .checkbox-complete {
   display: block;
-}
-
-.checkbox.active .checkbox-default {
-  display: none;
+  animation: complete 0.2s linear forwards;
 }
 
 .checkbox.active:hover .checkbox-loading {
