--- a/styles.css
+++ b/styles.css
@@ -731,17 +731,17 @@ button {
   justify-content: center;
 }
 
-.icon:hover {
+.icon:hover, .checkbox:hover {
   border-radius: 6px;
   background: var(--states-hover, #f1f1f1);
 }
-.icon:active {
+.icon:active, .checkbox:active {
   border-radius: 6px;
   background: var(--states-pressed, #f0f0f0);
 }
-.icon:focus {
+.icon:focus, .checkbox:focus {
   border-radius: 6px;
-  border: 2px solid var(--states-focused, #005bd3);
+  outline: 2px solid var(--states-focused, #005bd3);
 }
 
 .menu-pos {
@@ -889,6 +889,10 @@ main {
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+.setup-text {
+    margin-top: 4px;
 }
 
 .set-up .setup-item-wrap {
